# react-native-simple-jsi

./: LICENSE  README.md  package.json  react-native-simple-jsi.podspec
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/java/com/reactnativesimplejsi/: SimpleJsiModule.java
cpp/: react-native-simple-jsi.cpp  react-native-simple-jsi.h
example/android/: build.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/example/reactnativesimplejsi/: MainApplication.java
example/ios/SimpleJsiExample.xcodeproj/: project.pbxproj
example/src/: App.tsx
ios/: SimpleJsi.h  SimpleJsi.mm
